# snuffler-web

./: .gitignore  Cargo.toml  Pipfile
.cargo/: config.toml
pyembed/: Cargo.toml  build.rs
pyembed/src/: config.rs  lib.rs
src/: app.rs  lib.rs  main.rs  python.rs  state.rs
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/embed_python/: mod.rs
