[workspace]
members = ["xtask", "pyembed"]

[package]
name = "snuffler"
version = "0.1.0"
authors = ["Roman Dahm <contact@romnn.com>"]
edition = "2021"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.27.0"
eframe = { version = "0.27.0", default-features = false, features = [
    # Make egui comptaible with screen readers.
    # NOTE: adds a lot of dependencies.
    "accesskit",
    # Embed the default egui fonts.
    "default_fonts",
    # Use the glow rendering backend. Alternative: "wgpu".
    "wgpu",
    # "glow",
    # Enable restoring app state when restarting the app.
    "persistence",
] }
log = "0"

serde = { version = "1", features = ["derive"] }

# pyembed = "*"
pyembed = { path = "./pyembed" }
pyo3 = { version = "0.21.2", features = ["abi3-py310"] }
# pyo3 = { version = "0.21.2" }
# wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", default-features = false, features = [
#     "py_main",
#     "py312",
# ] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


# Optimize all dependencies even in debug builds:
# [profile.dev.package."*"]
# opt-level = 2

[build-dependencies]
# wlr-libpy = { git = "https://github.com/vmware-labs/webassembly-language-runtimes.git", default-features = false, features = [
#     "build",
#     "py312",
# ] }

[profile.release]
opt-level = 2 # fast and small wasm
