[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "*"
walkdir = "2"
once_cell = "*"
log = "0"
env_logger = "0"
encoding_rs = "0"
tar = "0"
zstd = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
